FIX: color contrast theme-2

--- a/calculator-app/src/styles/calculator-Themes.scss
+++ b/calculator-app/src/styles/calculator-Themes.scss
@@ -234,7 +234,7 @@
 
 //-Theme-2-
 .App.theme-2 {
-    background: hsl(0, 0%, 90%);
+    background: hsl(0, 0%, 75%);
 
     //header
     .title {
@@ -260,7 +260,7 @@
 
     //screen
     .calc-screen {
-        background: hsl(0, 0%, 93%);
+        background: hsl(0, 0%, 82%);
 
         .screen-text {
             color: hsl(60, 10%, 19%);
